# boids

./: .gitignore  CMakeLists.txt  flake.nix  main.c  shell.nix
